--- a/opt/shib-jetty-base/start.d/start.ini
+++ b/opt/shib-jetty-base/start.d/start.ini
@@ -1,27 +1,25 @@
 # Required Jetty modules
---module=server
---module=deploy
---module=annotations
---module=resources
---module=logging
---module=requestlog
---module=servlets
---module=jsp
---module=jstl
---module=ext
---module=plus
---module=rewrite
+#--module=http
+#--module=https
+#--module=server
+#--module=deploy
+#--module=annotations
+#--module=logging-logback
+#--module=logback-access
+#--module=servlets
+#--module=jsp
+#--module=jstl
+#--module=ext
+#--module=plus
+#--module=rewrite
 
 # Allows setting Java system properties (-Dname=value)
 # and JVM flags (-X, -XX) in this file
 # NOTE: spawns child Java process
 --exec
 
-# Bypass file validation for the SSL module, to work around a bug in Jetty 9.3.X
---skip-file-validation=ssl
-
 # Uncomment if IdP is installed somewhere other than /opt/shibboleth-idp
--Didp.home=/opt/shibboleth-idp
+#-Didp.home=/opt/shibboleth-idp
 
 # Alternate garbage collector that reduces memory needed for larger metadata files
 -XX:+UseG1GC
@@ -31,3 +29,6 @@
 # your particular metadata configuration.
 # This value will be replaced at runtime using the env JAVA_MAX_MEMORY setting.
 -XmxJETTY_MAX_HEAP
+
+# Prevent blocking for entropy.
+-Djava.security.egd=file:/dev/urandom
